src/objects/Collector_Session__c.object
<CustomObject>
    <fields>
        <fullName>CollectionSession__c</fullName>
        <label>Collection Session</label>
        <referenceTo>Collection_Time_Slot__c</referenceTo>
        <relationshipLabel>Collector Sessions</relationshipLabel>
        <relationshipName>Collector_Sessions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <label>Collector</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Collector</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collector Sessions</relationshipLabel>
        <relationshipName>Collector_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>Collector__r.FirstName + &apos; &apos; +  Collector__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Collector__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Collector__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <label>Collector Session</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Collector Sessions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collector Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>